add dokumentasi API Swagger login, register, get me for profile user from endpoint me
